# Fireflies_1.30

./: .gitignore  .replit  .replit.new  README.md  README_REPLIT.md  REPLIT_RUN_INSTRUCTIONS.md  REPLIT_SETUP.md  calendar_integration.py  flashcard_system.py  fonctionalite.txt  gamification.py  main.py  main.sh  pronote_web_app.py  pyproject.toml  replit.nix  replit.toml  replit_setup.sh  requirements.txt  routes.py  run.sh  study_analytics.py  translations.py
data/: settings.json  welcome_replies.json
data/admin_messages/: 20250406_201522_RISNEL.txt
data/calendar/RISNEL/: calendar_data.json
data/flashcards/: est_20250408123810.json
data/flashcards/RISNEL/: 1744109303.json  1744117948.json
data/gamification/: RISNEL.json
data/user_settings/: RISNEL_accessibility.json
static/css/: ai_assistant.css  dark_mode.css
static/js/: accessibility.js
templates/: accessibility.html  achievements.html  admin_messages.html  ai_assistant.html  badges.html  base.html  dark_mode.css  dark_mode.html  dashboard.html  discussions.html  edit_flashcards.html  flashcard_quiz.html  flashcards.html  gamification.html  grades.html  homework.html  homework_priority.html  leaderboard.html  login.html  new_discussion.html  settings.html  study_analytics.html  study_schedule.html  timetable.html  view_discussion.html
